--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Countdown Timer</title>
 </head>
 <body>
-    
-</body>
+    <div class="container flex">
+        <div class="glass flex">
+            <span>00</span>
+        </div>
+        <div class="glass flex"><span>00</span></div>
+        <div class="glass flex"><span>00</span></div>
+    </div>
+</body>uo
 </html>
