Fix missing newline at end of index.html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
         <div class="glass flex"><span>00</span></div>
         <div class="glass flex"><span>00</span></div>
     </div>
-</body>uo
+</body>
 </html>
