--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Countdown Timer</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <div class="container flex">
-        <div class="glass flex">
-            <span>00</span>
+        <button id="button">Başlat</button>
+        <div class="glassmorph" id="glassmorph">
+      <div class="glass flex">
+        <span id="hours">00</span>
+      </div>
+      <div class="glass flex"><span id="minutes">00</span></div>
+      <div class="glass flex"><span id="seconds">00</span></div>            
         </div>
-        <div class="glass flex"><span>00</span></div>
-        <div class="glass flex"><span>00</span></div>
     </div>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
