Add hidden class to glassmorph div in index.html for initial visibility control

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container flex">
         <button id="button">Başlat</button>
-        <div class="glassmorph" id="glassmorph">
+        <div class="glassmorph hidden" id="glassmorph">
       <div class="glass flex">
         <span id="hours">00</span>
       </div>
