Update HTML structure: add center alignment to glassmorph and input elements; enhance button styling

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <div class="container">
-        <div class="glassmorph hidden" id="glassmorph">
+        <div class="glassmorph hidden center" id="glassmorph">
             <div class="glass flex"><span id="minutes">00</span></div>
             <div class="glass flex"><span id="seconds" style="color: #ffe4c1;">00</span></div>
         </div>
 
-        <div class="inp visible">
+        <div class="inp visible center">
             <input type="text" placeholder="Minute" class="minute-input" />
-            <button id="button">Başlat</button>
+            <button id="button" class="btns">Başlat</button>
         </div>
         <div class="buttons hidden">
         </div>
