Clear initial values for countdown display: remove default '00' from minute and second spans

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 
   <body>
     <div class="container">
-        <h1 class="center">Choose Time</h1>
       <div class="glassmorph hidden center" id="glassmorph">
-        <div class="glass flex"><span id="minutes">00</span></div>
+        <div class="glass flex"><span id="minutes"></span></div>
         <div class="glass flex">
-          <span id="seconds" style="color: #ffe4c1">00</span>
+          <span id="seconds" style="color: #ffe4c1"></span>
         </div>
       </div>
 
